<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">CalQ</string>
	<string name="activityLabel_settings">Settings</string>
	<string name="action_settings">Settings</string>
	
	<!-- Button Strings -->
	<string name="deleteOp_desc">Delete selection</string>
	<string name="deleteOpParent_desc">Delete operation acting on selection</string>
	<string name="swapPalette_desc">Switch Function Palette</string>
	<string name="newPalette_desc">Add Function Palette</string>
	<string name="removePalette_desc">Remove Function Palette</string>
	<string name="equal">=</string>
	<string name="number">123</string>
	<string name="shuffle">-></string>
	<string name="shuffleDesc">Shift operation order</string>
	<string name="example">Example MathML</string>
	<string name="numkeyboard_hint">0.0</string>
	<string name="textNum_blank">(incomplete)</string>
	<string name="textNum_default">0</string>
	<string name="arrowUp">↑</string>
	<string name="circle">&#9675;</string>
	
	<string name="sum">+</string>
	<string name="difference">&#8722;</string>
	<string name="product">&#215;</string>
	<string name="quotient">&#247;</string>
	<string name="absolute">|x|</string>
	<string name="negative">-x</string>
	<string name="square">x&#178;</string>
	<string name="mult_inverse">1/x</string>

	<string name="power">^</string>
	<string name="exp_e">e^</string>
	<string name="exp_10">10^</string>
	<string name="log10">log</string>
	<string name="ln">ln</string>
	<string name="const_e">e</string>
	<string name="squareroot">√</string>
	
	<string name="sine">sin</string>
	<string name="cosine">cos</string>
	<string name="tangent">tan</string>
	<string name="arcsine">asin</string>
	<string name="arccosine">acos</string>
	<string name="arctangent">atan</string>
	<string name="const_pi">&#960;</string>

	<string name="hypsine">sinh</string>
	<string name="hypcosine">cosh</string>
	<string name="hyptangent">tanh</string>
	<string name="arhypsine">asinh</string>
	<string name="arhypcosine">acosh</string>
	<string name="arhyptangent">atanh</string>
	
	<string name="factorial">n!</string>
	<string name="nCk">nCk</string>
	<string name="nPk">nPk</string>
	
	<string name="remainder">rem</string>
	<string name="gcd">gcd</string>
	<string name="lcm">lcm</string>
		
	<string name="tag_op">operation button</string>
	<string name="tag_plt">operation palette</string>
	
	<!-- Palette-Choice Menu Strings -->
	<string name="palettemenu_header">Button Palettes</string>
	<string name="palettemenu_basic">Basic Operations</string>
	<string name="palettemenu_basic_cond">Basic Ops</string>
	<string name="palettemenu_log">Powers and Logarithms</string>
	<string name="palettemenu_log_cond">Powers, Logs</string>
	<string name="palettemenu_trig">Trigonometric Functions</string>
	<string name="palettemenu_trig_cond">Trig.</string>
	<string name="palettemenu_hyp">Hyperbolic Functions</string>
	<string name="palettemenu_hyp_cond">Hyp.</string>
	<string name="palettemenu_perm">Permutations</string>
	<string name="palettemenu_perm_cond">Perm.</string>
	<string name="palettemenu_arith">Arithmetic</string>
	<string name="palettemenu_arith_cond">Arith.</string>
				
	<!-- Preferences Strings -->
	<string name="prefKey_paletteIds_baseStr">pref_palette_</string>
	<string name="fragtag_retainOpTree">expression_data</string>
	<string name="fragtag_settings">settings</string>
	
	<string name="prefCategory_UiStyle">User Interface</string>
	<string name="prefKey_paletteActionMode">pref_palette_action_mode</string>
	<string name="prefTitle_paletteActionMode">Action: Manage Functions</string>
	<string name="prefSummary_paletteActionMode">
	    Set how to change/remove function palettes</string>
	<string name="prefDialog_paletteActionMode">Action Style</string>
	<string name="prefEntry_paletteActionMode_sidebutton">Side Buttons</string>
	<string name="prefValue_paletteActionMode_sidebutton">0</string>
	<string name="prefEntry_paletteActionMode_swipe">Left/Right Swipe</string>
	<string name="prefValue_paletteActionMode_swipe">1</string>
	<string name="prefValue_paletteActionMode_default">
	    @string/prefValue_paletteActionMode_sidebutton</string>
	
	<string name="prefCategory_screenOptions">Screen Options</string>
	<string name="prefTitle_renderFormat">Rendering Format</string>
	<string name="prefEntry_renderFormat_Html">Raw HTML</string>
	<string name="prefEntry_renderFormat_MathmlSvg">MathML (SVG)</string>
	<string name="prefEntry_renderFormat_MathmlHtmlCss">MathML (HTML/CSS)</string>
	<string name="prefTitle_textSize">Text Size</string>
	
	<string name="prefCategory_meta">The Meta</string>
	<string name="prefKey_donate">pref_donate</string>
	<string name="prefTitle_donate">Donate with PayPal</string>
	<string name="prefSummary_donate">Opens window in browser</string>
	
</resources>
