<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/palette_basic"
    android:tag="@string/tag_plt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:shrinkColumns="*"
	android:stretchColumns="*"
	style="?android:attr/buttonBarStyle"
    >
    
	<TableRow>
		<Button
			android:id="@+id/buttonSum"
			android:tag="@string/tag_op"
			android:text="@string/sum"
			android:textSize="40sp"
			style="?android:attr/buttonBarButtonStyle"
			 />
		<Button
			android:id="@+id/buttonDiff"
			android:tag="@string/tag_op"
			android:text="@string/difference"
			android:textSize="40sp"
			style="?android:attr/buttonBarButtonStyle"
			 />
		<Button
			android:id="@+id/buttonProd"
			android:tag="@string/tag_op"
			android:text="@string/product"
			android:textSize="40sp"
			style="?android:attr/buttonBarButtonStyle"
			 />
		<Button
			android:id="@+id/buttonQuot"
			android:tag="@string/tag_op"
			android:text="@string/quotient"
			android:textSize="40sp"
			style="?android:attr/buttonBarButtonStyle"
			 />
	</TableRow>
	
	<TableRow>
		<Button
			android:id="@+id/buttonNeg"
			android:tag="@string/tag_op"
			android:text="@string/negative"
			android:textSize="30sp"
			style="?android:attr/buttonBarButtonStyle"
			 />
		<Button
			android:id="@+id/buttonAbs"
			android:tag="@string/tag_op"
			android:text="@string/absolute"
			android:textSize="30sp"
			style="?android:attr/buttonBarButtonStyle"
			 />
		<Button
			android:id="@+id/buttonSqr"
			android:tag="@string/tag_op"
			android:text="@string/square"
			android:textSize="30sp"
			style="?android:attr/buttonBarButtonStyle"
			 />
		<Button
			android:id="@+id/buttonMultInv"
			android:tag="@string/tag_op"
			android:text="@string/mult_inverse"
			android:textSize="30sp"
			style="?android:attr/buttonBarButtonStyle"
			 />
					
	</TableRow>
</TableLayout>
