<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/palette_perm"
    android:tag="@string/tag_plt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="@string/stretchPaletteCols"
    >
    
	<TableRow>
		<awqatty.b.OpButtons.OperationButton
			android:id="@+id/buttonFact"
			android:tag="@string/tag_op"
			android:text="@string/factorial"
			android:textSize="@dimen/button_textSize_M"
			style="?android:attr/borderlessButtonStyle"
			 />
		<awqatty.b.OpButtons.OperationButton
			android:id="@+id/buttonNPK"
			android:tag="@string/tag_op"
			android:text="@string/nPk"
			android:textSize="@dimen/button_textSize_M"
			style="?android:attr/borderlessButtonStyle"
			 />
		<awqatty.b.OpButtons.OperationButton
			android:id="@+id/buttonNCK"
			android:tag="@string/tag_op"
			android:text="@string/nCk"
			android:textSize="@dimen/button_textSize_M"
			style="?android:attr/borderlessButtonStyle"
			 />
	</TableRow>
</TableLayout>
