<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

	<WebView android:id="@+id/webview"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_alignParentTop="true"
	    android:layout_above="@+id/textNum"
	    />
    
	<TextView
	    android:id="@+id/textNum"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/opPanel"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:hint="@string/numkeyboard_hint"
	    android:textSize="40sp"
	    android:textColor="@color/orange"
	    android:textColorHint="@color/mid_blue"
	    android:maxLines="1"
	    android:gravity="right"
	     />
	
	<TableLayout
        android:id="@+id/opPanel"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:layout_alignParentBottom="true"
        android:stretchColumns="*" >
         
        <TableRow
            android:paddingBottom="@dimen/activity_vertical_margin" >
			<ImageButton
			    android:id="@+id/buttonDel"
			    android:src="@drawable/ic_action_remove"
			    android:contentDescription="@string/deleteDesc"
			    android:tint="@color/black" />		
            <Button
                android:id="@+id/buttonNum"
                android:text="@string/number"
                android:textStyle="bold" />
        </TableRow>
        
        <TableRow>
            <Button
                android:id="@+id/buttonSum"
                android:text="@string/sum"
                />
            <Button
                android:id="@+id/buttonDiff"
                android:text="@string/difference"
                />
   	        <Button
                android:id="@+id/buttonProd"
                android:text="@string/product"
                />
            <Button
                android:id="@+id/buttonQuot"
                android:text="@string/quotient"
                />
        </TableRow>
        
        <TableRow>
            <Button
                android:id="@+id/buttonPow"
                android:text="@string/power"
                />
            <Button
                android:id="@+id/buttonSqr"
                android:text="@string/square"
                />
            <Button
                android:id="@+id/buttonSqrt"
                android:text="@string/squareroot"
                />
            
        </TableRow>
    </TableLayout>
	    
    <android.inputmethodservice.KeyboardView
        android:id="@+id/keyboardNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
    	android:layout_alignParentBottom="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone" />
   	
</RelativeLayout>