<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/palettebox"
    android:orientation="horizontal" 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
	android:divider="?android:attr/dividerVertical"
	android:showDividers="middle" >
    
    <View
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:tag="@string/tag_plt"
        android:visibility="gone" />

	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="match_parent"
	    android:layout_weight="1"
	    style="?android:attr/buttonBarStyle" >
		<ImageButton
		    android:id="@+id/buttonRemovePalette"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:src="@drawable/ic_action_remove"
		    android:tint="@color/color_paletteDel"
		    android:scaleType="center"
		    android:contentDescription="@string/removePalette_desc"
			style="?android:attr/buttonBarButtonStyle"
			android:longClickable="false" />
	
   		<ImageButton
		    android:id="@+id/buttonSwapPalette"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:src="@drawable/ic_action_expand"
		    android:tint="@color/color_paletteSwap"
		    android:scaleType="center"
		    android:contentDescription="@string/swapPalette_desc"
			style="?android:attr/buttonBarButtonStyle"
			android:longClickable="false" />
		
	</LinearLayout>
</LinearLayout>
